# -*- Autoconf -*- 

#
#                                #\\\\
#                               ###\\\\
#                              #####\\\\
#                             #######\\\\
#                            #### ####\\\\
#                           ####   ####\\\\
#                          ####   / ####\\\\
#                         ####   /   ####\\\\
#                        ####   /     ####\\\\
#                       ####   /       ####\\\\
#                      ####   /         ####\\\\
#                     ####   /           ####\\\\
#                    ####   /             ####\\\\
#                   ####   /               ####\\\\
#                  ####   /\\\\\\\\\\\\\\\\\\\\\\\\\
#                 ####   /\\\\\\\\\\\\\\\\\\\\\\\\\\\
#                 ###                               /
#                 ##_______________________________/
#                                   
#           M  E  G  I  S  T  O  S      P  R  O  J  E  C  T

# RCS/CVS CHANGELOG (HISTORICAL PURPOSES)

#
# $Id: configure.in,v 2.0 2004/09/13 19:44:25 alexios Exp $
#
# $Log: configure.in,v $
# Revision 2.0  2004/09/13 19:44:25  alexios
# Stepped version to recover CVS repository after near-catastrophic disk
# crash.
#
# Revision 1.14  2004/07/15 14:44:34  alexios
# Changed instances of CFLAGS to AM_CFLAGS so as not to override user
# settings.
#
# Revision 1.13  2004/05/22 19:24:06  alexios
# Added bbsuserdel.
#
# Revision 1.12  2004/05/21 20:15:08  alexios
# Added the bbscleanup directory.
#
# Revision 1.11  2004/05/03 05:27:13  alexios
# Numerous changes to implement the new build infrastructure.
#
# Revision 1.10  2003/12/24 18:43:15  alexios
# Added SOVERSION variable used when building shared objects; added
# checks for curses, ncurses and friends (headers and libraries). For
# the time being, only true curses and ncurses libraries are checked
# for. Slang with curses emulation isn't. Added MetaBBS support,
# including switches to enable it. It is currently disabled due to build
# issues and is no longer needed in its present, RPC-based, form. Added
# mbk directory to simplify dependency graph where more than one
# subdirectory depends on the same message block or header file. Added
# more source subdirectories.
#
# Revision 1.9  2003/12/22 16:45:05  alexios
# Numerous changes in directory setup, AC_OUTPUT variables et cetera.
#
# Revision 1.8  2003/09/30 15:11:34  alexios
# Various changes to account for updated directory structure and new code.
#
# Revision 1.7  2003/09/29 21:37:32  alexios
# Renamed src/ directory to lib/ to accommodate more source code in this
# tree.
#
# Revision 1.6  2003/09/28 22:23:59  alexios
# Added conditional generation of documentation (via doxygen detection)
# and locale directory.
#
# Revision 1.5  2003/09/28 13:14:32  alexios
# Added gettext tests and support.
#
# Revision 1.4  2003/08/15 20:30:54  alexios
# Added magic to get the version from debian/changelog, so it only needs
# to be changed in one place, and it's done automatically too.
#
# Revision 1.3  2003/08/15 20:25:55  alexios
# Stepped version.
#
# Revision 1.2  2003/08/15 20:07:59  alexios
# Added enough information and variables for megistos-config.
#
# Revision 1.1  2003/08/15 18:06:56  alexios
# Initial revision.
#

# Check
AC_INIT(debian/changelog)

# Get version and package name from debian repo
AC_MSG_CHECKING(package name and version)
package=`head -1 $srcdir/debian/changelog | sed -e 's/^ \+//g' -e 's/ \+.*$//'`
ver=`grep urgency= $srcdir/debian/changelog |head -1|sed -e 's/^.*(\(.*\)).*$/\1/'`
AC_MSG_RESULT(${package}-${ver})

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl Use libtool to make a shared library (with ltdl support)
AC_LIBTOOL_DLOPEN
AC_LIBLTDL_CONVENIENCE
AC_SUBST(LTDLINCL)
AC_SUBST(LIBLTDL)
AC_LIBLTDL_INSTALLABLE
AC_PROG_LIBTOOL
AC_CONFIG_SUBDIRS(libltdl externals/typhoon)
AM_CFLAGS="$CFLAGS $LIBLINCL"
LDFLAGS="$LDFLAGS $LIBLTDL"
