#                                               -*- Autoconf -*-

# $Id$
#
# $Log$
# Revision 1.8  2003/09/30 15:11:34  alexios
# Various changes to account for updated directory structure and new code.
#
# Revision 1.7  2003/09/29 21:37:32  alexios
# Renamed src/ directory to lib/ to accommodate more source code in this
# tree.
#
# Revision 1.6  2003/09/28 22:23:59  alexios
# Added conditional generation of documentation (via doxygen detection)
# and locale directory.
#
# Revision 1.5  2003/09/28 13:14:32  alexios
# Added gettext tests and support.
#
# Revision 1.4  2003/08/15 20:30:54  alexios
# Added magic to get the version from debian/changelog, so it only needs
# to be changed in one place, and it's done automatically too.
#
# Revision 1.3  2003/08/15 20:25:55  alexios
# Stepped version.
#
# Revision 1.2  2003/08/15 20:07:59  alexios
# Added enough information and variables for megistos-config.
#
# Revision 1.1  2003/08/15 18:06:56  alexios
# Initial revision.
#

dnl Process this file with autoconf to produce a configure script.
AC_INIT(libmegistos/audit.c)

dnl Magic to obtain the package name and version from
dnl debian/changelog, where it should reside.

package=`head -1 debian/changelog | sed -e 's/^ \+//g' -e 's/ \+.*$//'`
ver=`grep urgency= debian/changelog |head -1|sed -e 's/^.*(\(.*\)).*$/\1/'`

dnl Every other copy of the package version number gets its value from
dnl here (BUT NOT the files in debian/)

AM_INIT_AUTOMAKE($package, $ver)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(bbsconfig.h)

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
dnl AC_PROG_RANLIB

dnl Check for doxygen
AC_PATH_PROG([DOXYGEN],[doxygen])
AM_CONDITIONAL(HAVE_DOXYGEN,test .$DOXYGEN != .)

dnl Use libtool to make a shared library (with ltdl support)
AC_LIBLTDL_CONVENIENCE
AC_SUBST(LTDLINCL)
AC_SUBST(LIBLTDL)
AC_LIBLTDL_INSTALLABLE
AC_PROG_LIBTOOL
AC_CONFIG_SUBDIRS(libltdl)
CFLAGS="$CFLAGS $LIBLINCL"
LDFLAGS="$LDFLAGS $LIBLTDL"

dnl Check for i18n
AM_GNU_GETTEXT
AM_GNU_GETTEXT_VERSION(0.12.1)

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(\
	arpa/telnet.h \
	errno.h \
	dlfcn.h \
	fcntl.h \
	getopt.h \
	grp.h \
	limits.h \
	malloc.h \
	memory.h \
	netinet/in.h \
	paths.h \
	pwd.h \
	rx.h \
	regex.h \
	rpc/rpc.h \
	rpc.h \
	setjmp.h \
	sgtty.h \
	signal.h \
	stdarg.h \
	stdint.h \
	string.h \
	strings.h \
	sys/errno.h \
	sys/file.h \
	sys/filio.h \
	sys/int_types.h \
	sys/ioctl.h \
	sys/ipc.h \
	sys/msg.h \
	sys/param.h \
	sys/resource.h \
	sys/sem.h \
	sys/shm.h \
	sys/signal.h \
	sys/socket.h \
	sys/stat.h \
	sys/stream.h \
	sys/time.h \
	sys/tty.h \
	sys/types.h \
	sys/un.h \
	sys/varargs.h \
	sys/vt.h \
	sys/wait.h \
	syslog.h \
	telnet.h \
	termcap.h \
	termio.h \
	unistd.h \
	utime.h \
	utmp.h \
	varargs.h \
	zlib.h \
	zlib/zlib.h \
)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_HEADER_TIME
AC_STRUCT_ST_RDEV
AC_STRUCT_TM
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_UID_T

# Checks for library functions.

AC_FUNC_CHOWN
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_FORK
AC_FUNC_MEMCMP
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_SETPGRP
AC_FUNC_STRFTIME
AC_FUNC_UTIME_NULL
AC_FUNC_VPRINTF

AC_HEADER_STDC
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(
	atexit \
	bzero \
	chown \
	getcwd \
	gethostname \
	getpt \
	gettimeofday \
	malloc \
	memcpy \
	memset \
	mkdir \
	mkfifo \
	mktime \
	putenv \
	realloc \
	rmdir \
	select \
	socket \
	stat \
	strchr \
	strcspn \
	strdup \
	strerror \
	strrchr \
	strspn \
	strstr \
	uname \
	usleep \
	vhangup \
	setenv \
)

if test x$datadir != xNONE ;
then
	p=$datadir
else
	p=$prefix
fi

BASENAME=megistos
AC_SUBST(BASENAME)
AC_DEFINE_UNQUOTED(BASENAME,"$BASENAME",[The default system directory name.])

BASEDIR=$p/lib/$BASENAME
AC_SUBST(BASEDIR)
AC_DEFINE_UNQUOTED(BASEDIR,"$BASEDIR",[The default base directory of the system's data files.])

LOCALEDIR=$p/share/locale
AC_SUBST(LOCALEDIR)
AC_DEFINE_UNQUOTED(LOCALEDIR,"$LOCALEDIR",[The system's locale catalog directory.])

PKGDATADIR=$datadir/$BASENAME
PKGLIBDIR=$libdir/$BASENAME
PKGINCLUDEDIR=$includedir/$BASENAME

AC_SUBST(PKGDATADIR)
AC_SUBST(PKGLIBDIR)
AC_SUBST(PKGINCLUDEDIR)

CFLAGS="$CFLAGS -Wall"

dnl This is the main library directory. Its name is user-defined for
dnl flexibility (and because it kept changing for a while).

LIBMEGISTOS=libmegistos
AC_SUBST(LIBMEGISTOS)

AC_OUTPUT([
	Makefile
	libmegistos/Makefile
	libmegistos/megistos-config
	intl/Makefile
	po/Makefile.in
	m4/Makefile
	doc/Makefile
	src/Makefile
	src/system/Makefile
	src/system/bbsinit/Makefile])


dnl Print out the configuration.

cat <<EOF

Summary of settings

Compiler (CC):           $CC
Compiler flags (CFLAGS): $CFLAGS
Linker (LD):             $LD
Linker flags (LDFLAGS):  $LDFLAGS

Installation prefix:     $prefix
Execution prefix:        $exec_prefix
Data directory:          $PKGDATADIR
Library directory:       $PKGLIBDIR

You can now run:

\$ make

EOF
