dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/LIB/bbsmod.c)

dnl Add to the CPP path
export CPPFLAGS
CPPFLAGS="$CPPFLAGS -I/usr/include/ncurses -I/usr/include/curses -I/usr/include/slang"

srcdir=.

AC_CONFIG_HEADER(CONFIG/bbsconfig.defs.h)



dnl check for GNU make
AC_MSG_CHECKING(for GNU make)
make=`./make-command`
AC_SUBST(make)
AC_MSG_RESULT($make)



dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LEX
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_YACC
AM_PROG_LIBTOOL



dnl Check for uname
AC_CHECK_PROG(system,uname,`uname`,unknown)
if test "x$system" = xLinux; then
AC_CHECK_PROG(machine,uname,`uname --machine`,unknown)
fi



dnl Get base directory
AC_MSG_CHECKING(where the base directory is)
basedir=`pwd|sed 's/\/src$//'|tr -s /`
AC_SUBST(basedir)
AC_MSG_RESULT($basedir)



dnl Check for the standard UNIX utilities
AC_CHECK_PROG(ar,ar,ar,unknown)
AC_CHECK_PROG(chmod,chmod,chmod,unknown)
AC_CHECK_PROG(chown,chown,chown,unknown)
AC_CHECK_PROG(cp,cp,cp,unknown)
AC_CHECK_PROG(ln,ln,ln,unknown)
AC_CHECK_PROG(mv,mv,mv,unknown)
AC_CHECK_PROG(rm,rm,rm,unknown)
AC_CHECK_PROG(strip,strip,strip,unknown)
AC_CHECK_PROG(ci,ci,ci,unknown)
AC_CHECK_PROG(co,co,co,unknown)
AC_CHECK_PROG(rcs,rcs,rcs,unknown)
AC_CHECK_PROG(rpcgen,rpcgen,rpcgen,unknown)
AC_CHECK_PROGS(tar,gnutar gtar tar,no)
AC_CHECK_PROGS(bzip2,bzip2 bzip,no)
AC_CHECK_PROG(gzip,gzip,gzip,no)



dnl Checks for libraries.

dnl Check for bbs library (why is this here?)
dnl AC_CHECK_LIB(bbs, mod_init)

dnl Check for BSD
AC_CHECK_LIB(bsd, bsd_ioctl)

dnl Check for the maths library
AC_CHECK_LIB(m, floor)

dnl Check for dynamic loader interface
AC_CHECK_LIB(dl, dlopen)

dnl Check for Slang as a replacement to {n,}curses
dnl AC_CHECK_LIB(slang, init_SLang)

dnl Check for ncurses
AC_CHECK_LIB(ncurses, init_color)

dnl Check for plain curses
AC_CHECK_LIB(curses, initscr)

dnl Check for Termcap
AC_CHECK_LIB(termcap, tgetflag)

dnl Check for Typhoon
AC_CHECK_LIB(typhoon, d_open)

dnl Check for Zlib
AC_SUBST(ZLIB)
AC_CHECK_LIB(z, deflate,ZLIB=-lz;AC_DEFINE_UNQUOTED(HAVE_ZLIB))



dnl Check for Megistos components

dnl Check for MetaBBS
AC_CHECK_FILE(SYSTEM/daemons/rpc.metabbs,AC_DEFINE_UNQUOTED(HAVE_METABBS))



dnl Configure libtool
AC_OUTPUT_COMMANDS(./ltconfig ltmain.sh)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT

AC_CHECK_HEADERS(\
	arpa/telnet.h \
	errno.h \
	dlfcn.h \
	fcntl.h \
	getopt.h \
	grp.h \
	limits.h \
	malloc.h \
	memory.h \
	netinet/in.h \
	paths.h \
	pwd.h \
	rx.h \
	regex.h \
	rpc/rpc.h \
	rpc.h \
	setjmp.h \
	sgtty.h \
	signal.h \
	stdarg.h \
	stdint.h \
	string.h \
	strings.h \
	sys/errno.h \
	sys/file.h \
	sys/filio.h \
	sys/int_types.h \
	sys/ioctl.h \
	sys/ipc.h \
	sys/msg.h \
	sys/param.h \
	sys/resource.h \
	sys/sem.h \
	sys/shm.h \
	sys/signal.h \
	sys/socket.h \
	sys/stat.h \
	sys/stream.h \
	sys/time.h \
	sys/tty.h \
	sys/types.h \
	sys/un.h \
	sys/varargs.h \
	sys/vt.h \
	syslog.h \
	telnet.h \
	termcap.h \
	termio.h \
	unistd.h \
	utime.h \
	utmp.h \
	varargs.h \
	zlib.h \
	zlib/zlib.h \
)

dnl Check for the SLang and/or {n,}curses headers.
dnl AC_CHECK_HEADERS(curses.h ncurses.h curses/curses.h curses/ncurses.h
dnl		 ncurses/curses.h ncurses/ncurses.h)
AC_CHECK_HEADERS(slang.h slcurses.h slang/slang.h slang/slcurses.h \
		 curses.h ncurses.h curses/curses.h curses/ncurses.h \
		 ncurses/curses.h ncurses/ncurses.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_ST_RDEV
AC_HEADER_TIME
AC_STRUCT_TM
AC_TYPE_UID_T

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_FUNC_SETPGRP
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_UTIME_NULL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(\
	getcwd \
	gethostname \
	getpt \
	memcpy \
	mkdir \
	mkfifo \
	mktime \
	putenv \
	rmdir \
	select \
	socket \
	strchr \
	strcspn \
	strdup \
	strerror \
	strspn \
	strstr \
	uname \
	usleep \
	vhangup \
)

AC_OUTPUT(CONFIG/Make.config CONFIG/Make.RCS makefile)
